# data-dict-tool

./: .editorconfig  .gitignore  .pdm-python  .versionrc.json  CHANGELOG.md  README.md  build.ps1  build.sh  data_dict.py  execl.py  main.py  package-lock.json  package.json  pandas_test.py  pnpm-lock.yaml  py-call-java.py  pyproject.toml  requirements.txt  test.xlsx
data/: data2.json  map.json
doc/: READE.md
mock/: data.json  map.json
mysql/: mysql-demo.py
qt/: execl_util.py  execl_util_openpyxl.py  json_execl.py  mac_xlwings_test.py  main.py  run.py  sql_util.py  test.py  untitled.py  untitled.ui
qt/execl/: execl.ui  execl_util.py  json_execl.py  mac_xlwings_test.py  main.py  sql_util.py  test.xlsx
qt/execl/view/: dict_view.ui
qt/ui/: uic_load.ui
qt/view/: dict_view.ui  execl.ui
test/: openpyxl_demo.py
