[project]
name = "data-dict-tool"
version = "0.1.0"
description = "数据字典生成助手"
authors = [
    {name = "jiangy", email = "jiangliu0316@outlook.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
